# petrag

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: config.py  embeddings.py  llm.py  main.py  schemas.py  vector_store.py
docs/: decisions.md
ingestion/: chunking.py  extract_docstrings.py  extract_git_log.py  extract_readme.py  ingest.py  vector_store.py
tests/: test_app_vector_store.py  test_extract_docstrings.py  test_extract_git_log.py  test_extract_readme.py  test_ingest.py  test_ingestion_vector_store.py  test_llm.py  test_main.py
