[project]
name = "petrag"
requires-python = ">=3.12,<3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter/line-length, avoid noisy duplicate errors
]